# serialtool

./: .gitignore  CMakeLists.txt  serialtool.pro
src/: comtoolmain.cpp  myqcombobox.cpp  myqcombobox.h  myqlineedit.cpp  myqlineedit.h  serialtool.cpp  serialtool.h
